@@ -35,10 +35,12 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2020-04-24</b></span>
+		<span><b>2020-04-26</b></span>
 		<div id="changelog20200424">
 			<ul>
+				<li>Naming functionality for builds</li>
 				<li>Fixed Finger Offensive damage computation</li>
+				<li>Shield Chain now take into consideration race defense bypass</li>
 			</ul>
 		</div>
 		<br/>
@@ -47,20 +49,6 @@
 			<ul>
 				<li>Fixed Bragi behaviour</li>
 				<li>Fixed hard DEF formula</li>
-			</ul>
-		</div>
-		<br/>
-		<span><b>2020-04-12</b></span>
-		<div id="changelog20200412">
-			<ul>
-				<li>Fixed ASDP computation for double dagger</li>
-				<li>Fixed [Heal] damage computation</li>
-				<li>Fixed flat MATK bonus for MATK computation</li>
-				<li>Fixed magical elemental damage computation</li>
-				<li>Added Old Glast Heim and April patch cards</li>
-				<li>Added new Eclage's equipment and food</li>
-				<li>Added Eclage, Valkyries' Realm, Old Glast Heim and Malangdo Culvert monsters</li>
-				<li>Added Akkorokamui instance's equipment</li>
 			</ul>
 		</div>
 	</div>
